[WIP] fix some tests
Signed-off-by: David Thompson <davthomp@redhat.com>